--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -923,9 +923,6 @@ config HAVE_SOFTIRQ_ON_OWN_STACK
 	  Architecture provides a function to run __do_softirq() on a
 	  separate stack.
 
-config SOFTIRQ_ON_OWN_STACK
-	def_bool HAVE_SOFTIRQ_ON_OWN_STACK && !PREEMPT_RT
-
 config ALTERNATE_USER_ADDRESS_SPACE
 	bool
 	help
@@ -1417,6 +1414,14 @@ config DYNAMIC_SIGFRAME
 # Select, if arch has a named attribute group bound to NUMA device nodes.
 config HAVE_ARCH_NODE_DEV_GROUP
 	bool
+
+config ARCH_HAS_NONLEAF_PMD_YOUNG
+	bool
+	help
+	  Architectures that select this option are capable of setting the
+	  accessed bit in non-leaf PMD entries when using them as part of linear
+	  address translations. Page table walkers that clear the accessed bit
+	  may use this capability to reduce their search space.
 
 source "kernel/gcov/Kconfig"
 
